WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105970
Fix incorrect assumption about in-flow descendants of inlines in touch event rect tracking
https://bugs.webkit.org/show_bug.cgi?id=105970
Summary
Fix incorrect assumption about in-flow descendants of inlines in touch event ...
Levi Weintraub
Reported
2013-01-02 16:45:37 PST
Previously, we were only walking the child sub-tree of Blocks to accumulate touch event rectangles. This change will do it for all renderers, but short circuit for regular children.
Attachments
Patch
(12.55 KB, patch)
2013-01-02 16:59 PST
,
Levi Weintraub
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Levi Weintraub
Comment 1
2013-01-02 16:59:43 PST
Created
attachment 181111
[details]
Patch
WebKit Review Bot
Comment 2
2013-01-02 21:01:04 PST
Comment on
attachment 181111
[details]
Patch
Attachment 181111
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/15656315
New failing tests: platform/chromium/fast/events/touch/compositor-touch-hit-rects.html
Levi Weintraub
Comment 3
2013-01-03 11:11:01 PST
Comment on
attachment 181111
[details]
Patch Committed
r138717
: <
http://trac.webkit.org/changeset/138717
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug